2010-08-29  Jeremy Moskovich  <jeremy@chromium.org>

Reviewed by Dimitri Glazkov.

        First step in unforking Chrome's FontPlatformDataMac.mm.
        Move files from platform/graphics/mac to platform/graphics/cocoa

        https://bugs.webkit.org/show_bug.cgi?id=41398

        Just moving files around so no new tests.

        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.xcodeproj/project.pbxproj:
        * platform/graphics/chromium/FontPlatformDataChromiumMac.mm:
        * platform/graphics/cocoa/FontPlatformData.h: Copied from WebCore/platform/graphics/mac/FontPlatformData.h.
        * platform/graphics/cocoa/FontPlatformDataCocoa.mm: Copied from WebCore/platform/graphics/mac/FontPlatformDataMac.mm.
        * platform/graphics/mac/FontPlatformData.h: Removed.
        * platform/graphics/mac/FontPlatformDataMac.mm: Removed.

Canonical link: https://commits.webkit.org/57123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66358 268f45cc-cd09-0410-ab3c-d52691b4dbfc